Edit syntax in the submit form to rectify flag result on validator, remove display flex wrap on resources to avoid changes in the links when changing screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,7 @@ nav {
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 100px;
+    margin-top: 92px;
     line-height: 1.8;
     
 }
@@ -336,13 +336,10 @@ ul {
     margin-left:40px;
 }
 
-/* Flexbox for support material container */
 #support-material-box {
-    justify-content: space-between; /* Ensures even spacing between items */
-    flex-wrap: wrap; /* Allows wrapping for smaller screens */
-    gap: 1rem; /* Adds space between items */
+    justify-content: space-between;
+    gap: 1rem;
 }
-
 
 
 /* Footer */
@@ -363,6 +360,53 @@ footer {
     font-size: 160%;
     padding: 5%;
     color: #ffffff;
+}
+
+/*Submit form*/
+
+#submit {
+    background-image: url("./images/signup-adventure-begin.jpg");
+    background-size: cover;
+    background-position: center center;
+    min-height: 100vh;
+    padding: 40% 10% 40% 10%;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+#submit-form {
+    color: #fafafa;
+    font-size: 200%;
+    text-align:center;
+    background-color: rgba(60, 60, 60, 0.85);
+}
+
+#submit-form > h2 {
+    color: #fafafa;
+    
+}
+
+#submit-form-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#submit-form-button .join-button {
+    display: inline-block;
+    padding: 5px 75px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+    text-align: center;
+    border-radius: 2px;
+    border: none;
+}
+
+#submit-form-button .join-button:hover {
+    background-color: #fafafa;
+    color:#454b1b;
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -485,6 +529,10 @@ footer {
         background-color: #fafafa;
         color: #454b1b;
     }
+
+    #submit-form-button .join-button {
+        font-size: 200%;
+    }
 }
 
 
@@ -515,6 +563,14 @@ footer {
         left: 10%;
         top: 150px;
         font-size: 200%;
+    }
+
+    #submit-form {
+        font-size:400%;
+    }
+
+    #submit-form-button .join-button {
+        font-size: 300%;
     }
 }
 
@@ -577,25 +633,5 @@ footer {
 }
    
 
-#submit {
-    background-image: url("./images/signup-adventure-begin.jpg");
-    background-size: cover;
-    background-position: center center;
-    min-height: 100vh;
-    padding: 40% 10% 40% 10%;
-    flex-grow: 1;
-    align-items: center;
-    justify-content: center;
-}
 
-#submit-form {
-    color: #fafafa;
-    font-size: 200%;
-    text-align:center;
-    background-color: rgba(60, 60, 60, 0.85);
-}
 
-#submit-form > h2 {
-    color: #fafafa;
-    
-}
